Agregar estilos al footer

--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,22 @@ html, body {
     font-family: "Inter", sans-serif;
 }
 
-header {
-    display: flex;
-    flex-direction: row;
-    gap: 12px;
+header, footer {
     padding: 32px;
     background-color: #FFDF61;
-    border-bottom-left-radius: 24px;
-    border-bottom-right-radius: 24px;
     color: #6E4332;
     font-family: "Zilla Slab", serif;
     font-weight: bold;
     font-size: 20px;
+}
+
+header {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+    border-radius: 0 0 24px 24px;
+}
+
+footer {
+    border-radius: 24px 24px 0 0;
 }
