--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,26 @@
 :root {
     --bg-color: #FFDF61;
-    --text-color: #6E4332;;
+    --text-color: #6E4332;
+    --secondary-color: #fff4c8;
+    --alt-color: #ededed;
 }
 
 html, body {
     margin: 0;
     padding-left: 8px;
     padding-right: 8px;
+    min-height: 100vh;
+    max-width: 100vw;
     font-family: "Inter", sans-serif;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 12px;
+    min-height: 100vh;
+    /* max-width: 100%; */
 }
 
 header, footer {
@@ -28,6 +41,37 @@ header {
 
 footer {
     border-radius: 24px 24px 0 0;
+    /* position: absolute;
+    bottom: 0;
+    max-width: 100%; */
+}
+
+.card {
+    margin: 12px 0 12px 0;
+    padding: 32px;
+    border-radius: 24px;
+}
+
+.promo-card {
+    background-color: var(--secondary-color);
+}
+
+.info-card {
+    background-color: var(--alt-color);
+}
+
+.card-title {
+    font-family: "Zilla Slab", serif;
+    font-weight: bold;
+    font-size: 20px;
+    color: var(--text-color);
+}
+
+.card-info {
+    font-family: Inter, sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    color: var(--text-color);
 }
 
 .more-button {
