--- a/styles.css
+++ b/styles.css
@@ -5,26 +5,35 @@
     --alt-color: #ededed;
 }
 
-html, body {
+* {
+    box-sizing: border-box;
     margin: 0;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding: 0;
+}
+
+html, body {
     min-height: 100vh;
-    max-width: 100vw;
     font-family: "Inter", sans-serif;
 }
 
-.container {
+body {
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+#container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     gap: 12px;
-    min-height: 100vh;
+    min-height: 100%;
     /* max-width: 100%; */
 }
 
 header, footer {
     padding: 32px;
+    flex-grow: 0;
+    flex-shrink: 0;
     background-color: var(--bg-color);
     color: var(--text-color);
     font-family: "Zilla Slab", serif;
@@ -41,9 +50,10 @@ header {
 
 footer {
     border-radius: 24px 24px 0 0;
-    /* position: absolute;
-    bottom: 0;
-    max-width: 100%; */
+}
+
+main {
+    flex-grow: 1;
 }
 
 .card {
