--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    border: 0;
+    font-family: inherit;
+    color: var(--text-color)
 }
 
 html, body {
@@ -26,7 +29,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     gap: 12px;
-    min-height: 100%;
+    min-height: 100vh;
     /* max-width: 100%; */
 }
 
@@ -54,6 +57,39 @@ footer {
 
 main {
     flex-grow: 1;
+}
+
+.header-icon {
+    width: 24px;
+}
+
+nav {
+    flex-grow: 0;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 8px;
+}
+
+.nav-button {
+    width: 100%;
+    height: 100%;
+    background-color: var(--bg-color);
+    padding: 8px 16px 8px 16px;
+    border-radius: 8px;
+    font-size: 18px;
+    font-weight: bold;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 16px;
+}
+
+.nav-icon {
+    width: 18px;
 }
 
 .card {
