--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ nav {
     color: var(--text-color);
 }
 
-.card-info {
+.card-text {
     font-family: Inter, sans-serif;
     font-weight: normal;
     font-size: 16px;
