--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,7 @@ nav {
     margin: 12px 0 12px 0;
     padding: 32px;
     border-radius: 24px;
+    max-width: 600px;
 }
 
 .promo-card {
@@ -158,4 +159,32 @@ nav {
     color: var(--text-color);
     font-family: "Zilla Slab", serif;
     font-size: 16px;
+}
+
+.inner-card {
+    margin: 20px 0 20px 0;
+}
+
+.inner-card-text {
+    font-family: "Zilla Slab", serif;
+    font-weight: bold;
+    font-size: 22px;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: space-between;
+    gap: 12px;
+    margin: 32px 20px 32px 20px;
+}
+
+.inner-card-title {
+    font-size: 28px;
+}
+
+#verano {
+    background-color: var(--bg-color);
+    background-image: url("./assets/images/promo/summer.png");
+    background-position: top 15% right -10%;
+    background-size: 300px;
+    background-repeat: no-repeat;
 }
