--- a/styles.css
+++ b/styles.css
@@ -163,17 +163,18 @@ nav {
 .more-button {
   display: flex;
   flex-direction: row;
-  gap: 8px;
+  gap: 0.625rem;
   font-weight: 600;
   justify-content: center;
   align-items: center;
-  padding: 8px 16px 8px 16px;
+  padding: 0.5rem 1.125rem;
   border-radius: 8px;
   border: none;
   background-color: var(--bg-color);
   color: var(--text-color);
   font-family: "Zilla Slab", serif;
   font-size: 1rem;
+  letter-spacing: -0.03rem;
 }
 
 .inner-card {
