--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@
   --text-color: #6e4332;
   --secondary-color: #fff4c8;
   --alt-color: #ededed;
-  --background: #ffffff;
 }
 
 * {
@@ -22,7 +21,8 @@ body {
 }
 
 body {
-  padding: 0rem 1rem;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 #container {
@@ -121,7 +121,7 @@ nav {
 
 .card {
   margin: 12px 0 12px 0;
-  padding: 2rem 2rem;
+  padding: 32px;
   height: fit-content;
   border-radius: 24px;
 }
@@ -131,7 +131,6 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1.5rem;
 }
 
 .info-card {
@@ -145,11 +144,11 @@ nav {
 .card-title {
   font-family: "Zilla Slab", serif;
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 20px;
   color: var(--text-color);
   display: flex;
   flex-direction: row;
-  gap: 12px;
+  gap: 8px;
   text-align: center;
 }
 
@@ -164,18 +163,16 @@ nav {
 .more-button {
   display: flex;
   flex-direction: row;
-  gap: 0.625rem;
-  font-weight: 600;
+  gap: 8px;
   justify-content: center;
   align-items: center;
-  padding: 0.5rem 1.125rem;
+  padding: 8px 16px 8px 16px;
   border-radius: 8px;
   border: none;
   background-color: var(--bg-color);
   color: var(--text-color);
   font-family: "Zilla Slab", serif;
-  font-size: 1rem;
-  letter-spacing: -0.03rem;
+  font-size: 16px;
 }
 
 .inner-card {
@@ -183,7 +180,7 @@ nav {
   display: flex;
   flex-direction: row;
   width: 100%;
-  max-width: 600px;
+  max-width: 800px;
 }
 
 .inner-card div {
@@ -204,9 +201,8 @@ nav {
   background-color: #ffdf61;
 
   & img {
-    height: 20rem;
     top: -10px;
-    left: -2rem;
+    left: -10px;
   }
 }
 
@@ -242,13 +238,13 @@ nav {
 .inner-card-text {
   font-family: "Zilla Slab", serif;
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 22px;
   display: flex;
   flex-direction: column;
   align-items: left;
   justify-content: center;
+  gap: 12px;
   margin: 32px 20px 32px 20px;
-  font-weight: 600;
 
   & span {
     text-wrap: nowrap;
@@ -256,25 +252,23 @@ nav {
 }
 
 .inner-card-title {
-  font-weight: 700;
-  font-size: 2rem;
+  font-size: 28px;
 }
 
 .inner-promo {
+  margin: 20px 0 20px 0;
   display: flex;
   flex-direction: row;
   width: 100%;
-  max-width: 600px;
-  height: 225px;
-  padding: 0.75rem 1rem;
-  border-radius: 1.5rem;
+  max-width: 800px;
+  height: 250px;
 }
 
 #verano {
   background-color: var(--bg-color);
   background-image: url("./assets/images/promo/summer.png");
   background-position: top 15% right -4rem;
-  background-size: 275px;
+  background-size: 300px;
   background-repeat: no-repeat;
 }
 .more-button:link {
