--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,21 @@ header {
   border-radius: 0 0 24px 24px;
 }
 
+nav {
+  padding: 1.5rem;
+  border-radius: 1.5rem;
+  background-color: var(--secondary-color);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 8px;
+  overflow-x: scroll;
+}
+
+nav::-webkit-scrollbar {
+  display: none;
+}
+
 footer {
   border-radius: 24px 24px 0 0;
 }
@@ -89,19 +104,8 @@ main {
   width: 24px;
 }
 
-nav {
-  flex-grow: 0;
-  flex-shrink: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 8px;
-}
-
 .nav-button {
   width: 100%;
-  height: 100%;
   background-color: var(--bg-color);
   padding: 8px 16px 8px 16px;
   border-radius: 8px;
@@ -109,8 +113,8 @@ nav {
   font-weight: bold;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
   align-items: center;
+  justify-content: center;
   gap: 16px;
 }
 
@@ -288,4 +292,10 @@ nav {
 }
 .more-button:active {
   color: rgb(31, 26, 3);
+}
+
+@media screen and (min-width: 1280px) {
+  header img {
+    display: none;
+  }
 }
