--- a/styles.css
+++ b/styles.css
@@ -70,9 +70,11 @@ nav::-webkit-scrollbar {
 footer {
   border-radius: 24px 24px 0 0;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  gap: 12px;
   padding: 12px;
-
 }
 
 footer > h3 {
