--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,20 @@ footer {
 header {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   gap: 12px;
   border-radius: 0 0 24px 24px;
+}
+
+#header-title {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+}
+
+.company-logo {
+  height: 64px;
 }
 
 nav {
@@ -288,7 +300,7 @@ main {
   border-radius: 1.5rem;
 }
 
-#verano {
+#summer {
   background-color: var(--bg-color);
   background-image: url("./assets/images/promo/summer.png");
   background-position: top 15% right -4rem;
@@ -337,11 +349,7 @@ table thead tr th {
 }
 
 @media screen and (min-width: 1280px) {
-  header img {
+  header .icon {
     display: none;
   }
-}
-.footer-logo {
-  width: 123PX;
-  margin-right: 30px;
 }
