--- a/styles.css
+++ b/styles.css
@@ -149,10 +149,18 @@ main {
   gap: 1.5rem;
 }
 
+.promo-card,
+.info-card {
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
+}
+
 .promo-card {
   background-color: var(--secondary-color);
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -166,8 +174,8 @@ main {
 .info-card {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  gap: 12px;
   background-color: var(--alt-color);
 }
 
@@ -178,6 +186,8 @@ main {
   color: var(--text-color);
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
   gap: 12px;
   text-align: center;
 }
@@ -205,10 +215,11 @@ main {
   font-family: "Zilla Slab", serif;
   font-size: 1rem;
   letter-spacing: -0.03rem;
+  text-decoration: none;
 }
 
 .inner-card {
-  margin: 20px 0 20px 0;
+  /* margin: 20px 0 20px 0; */
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -307,15 +318,19 @@ main {
   background-size: 275px;
   background-repeat: no-repeat;
 }
+
 .more-button:link {
   color: rgb(233, 233, 41);
 }
+
 .more-button:visited {
   color: rgb(124, 124, 39);
 }
+
 .more-button:hover {
   color: rgb(255, 217, 0);
 }
+
 .more-button:active {
   color: rgb(31, 26, 3);
 }
@@ -329,12 +344,6 @@ main {
     opacity: 1;
     transform: scale(1);
   }
-}
-.promo-card,
-.info-card {
-  animation: appear linear;
-  animation-timeline: view();
-  animation-range: entry 0% cover 40%;
 }
 
 table {
