--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,8 @@ header {
   flex-direction: row;
   align-items: center;
   gap: 12px;
+  -moz-border-radius: 0 0 24px 24px;
+  -webkit-border-radius: 0 0 24px 24px;
   border-radius: 0 0 24px 24px;
 }
 
@@ -63,6 +65,8 @@ a{
 
 nav {
   padding: 1.25rem;
+  -moz-border-radius: 1.5rem;
+  -webkit-border-radius: 1.5rem;
   border-radius: 1.5rem;
   background-color: var(--secondary-color);
   display: flex;
@@ -77,6 +81,8 @@ nav::-webkit-scrollbar {
 }
 
 footer {
+  -moz-border-radius: 24px 24px 0 0;
+  -webkit-border-radius: 24px 24px 0 0;
   border-radius: 24px 24px 0 0;
   display: flex;
   flex-direction: column;
@@ -122,6 +128,8 @@ main {
   width: 100%;
   background-color: var(--bg-color);
   padding: 8px 16px 8px 16px;
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
   border-radius: 8px;
   font-size: 18px;
   font-weight: bold;
@@ -141,6 +149,8 @@ main {
   margin: 12px 0 12px 0;
   padding: 2rem 2rem;
   height: fit-content;
+  -moz-border-radius: 24px;
+  -webkit-border-radius: 24px;
   border-radius: 24px;
   gap: 1.5rem;
   animation: appear linear;
@@ -200,6 +210,8 @@ main {
   justify-content: center;
   align-items: center;
   padding: 0.5rem 1.125rem;
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
   border-radius: 8px;
   border: none;
   background-color: var(--bg-color);
@@ -300,6 +312,8 @@ main {
   max-width: 600px;
   height: 225px;
   padding: 1.5rem;
+  -moz-border-radius: 1.5rem;
+  -webkit-border-radius: 1.5rem;
   border-radius: 1.5rem;
 }
 
@@ -340,6 +354,8 @@ main {
 
 table {
   background-color: var(--bg-color);
+  -moz-border-radius: 1.5rem;
+  -webkit-border-radius: 1.5rem;
   border-radius: 1.5rem;
   border-spacing: 24px;
   padding: 0.2rem;
