Añadir página de reseñas

--- a/styles.css
+++ b/styles.css
@@ -378,3 +378,77 @@ table {
 table thead tr th {
   text-align: start;
 }
+
+.reviews-card {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  background-color: var(--secondary-color);
+}
+
+.review-input {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.review-input .inline {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 8px;
+}
+
+.review-input span {
+  font-weight: bold;
+}
+
+.review-input .stars {
+  align-items: center;
+  display: flex;
+  gap: 8px;
+}
+
+.review-input .stars input {
+  text-align: center;
+  padding: 0.5rem;
+  border-radius: 0.4rem;
+  font-size: 0.9rem;
+  width: 40px;
+}
+
+.review-input .stars input::-webkit-outer-spin-button,
+.review-input .stars input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.review-input button {
+  background-color: var(--bg-color);
+  padding: 1rem;
+  border-radius: 1rem;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.review-input textarea {
+  padding: 8px;
+  border-radius: 1rem;
+  font-size: 1rem;
+  outline: none;
+  resize: vertical;
+}
+
+.review-list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.review {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--bg-color);
+  padding: 1rem;
+  border-radius: 1rem;
+}
