--- a/styles.css
+++ b/styles.css
@@ -378,3 +378,22 @@ table {
 table thead tr th {
   text-align: start;
 }
+
+main .acerca {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.acercaDeNosotros {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  & img {
+    width: 80%;
+    border-radius: 20px;
+  }
+}
+main p {
+  text-align: center;
+  margin-top: 20px;
+}
