Agregar cursor: pointer en el boton de reseñas

--- a/styles.css
+++ b/styles.css
@@ -433,6 +433,7 @@ table thead tr th {
   border-radius: 1rem;
   font-size: 1rem;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .review-input textarea {
