--- a/styles.css
+++ b/styles.css
@@ -476,3 +476,15 @@ main p {
   text-align: center;
   margin-top: 20px;
 }
+.conteiner-map {
+  width: 90%;
+  height:100vh;
+  display: flex;
+  align-items: center;
+  align-content: center;
+}
+iframe {
+  display: flex;
+  gap: 15px;
+  width: 80%;
+  height: 70%;}
