--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,7 @@ main {
   animation-range: entry 0% cover 40%;
 }
 
-.promo-card {
+.promo-card, .aboutus-card {
   background-color: var(--secondary-color);
   display: flex;
   flex-direction: column;
@@ -463,6 +463,7 @@ main .acerca {
   text-align: center;
   margin-bottom: 20px;
 }
+
 .acercaDeNosotros {
   display: flex;
   justify-content: center;
@@ -473,10 +474,16 @@ main .acerca {
     border-radius: 20px;
   }
 }
+
 main p {
   text-align: center;
-  margin-top: 20px;
+  margin-bottom: 20px;
 }
+
+.aboutus-card > p {
+  max-width: 75%;
+}
+
 .conteiner-map {
   width: 90%;
   height:100vh;
@@ -484,6 +491,7 @@ main p {
   align-items: center;
   align-content: center;
 }
+
 iframe {
   display: flex;
   gap: 15px;
