--- a/styles.css
+++ b/styles.css
@@ -100,10 +100,11 @@ footer {
   padding: 1.5rem;
 }
 
-footer .logo {
+footer > h3 {
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  justify-items: center;
   gap: 8px;
 }
 
