--- a/styles.css
+++ b/styles.css
@@ -483,6 +483,38 @@ main p {
 .aboutus-card > p {
   max-width: 75%;
 }
+.contenedor2 {
+  display: flex;
+  align-items: flex-start; 
+  margin-bottom: 20px;
+  
+}
+.picture {
+  width: 500px; 
+  margin-right: 200px; 
+
+}
+.texto5{
+  flex: 1;
+}
+#map {
+  width: 100%;
+  height: 240px;
+  margin-top: 20px;
+}
+p {
+  display: flex;
+  justify-content: center;
+}
+.dia {
+  flex: 1;
+}
+.hora {
+  flex: 5;
+  text-align: right;
+}
+
+
 
 /* .map-card {
   width: 90%;
